--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Happy Paws</title>
+    <title>Hudson.F</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -20,19 +20,23 @@
 
 <!-- Navigation bar with links -->
 <div class="w3-bar w3-white w3-text-black">
-  <h2 class="w3-left w3-tag w3-pale-red w3-round">HAPPY PAWS</h2>
-  <a href="#Contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">CONTACT</a>
-  <a href="#Activities" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">ACTIVITIES</a>
-  <a href="#Trainers" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">TRAINERS</a>
+  <h2 class="w3-left w3-tag w3-yellow w3-round">HUDSON .F</h2>
+  <a href="#Contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">FUTURE</a>
+  <a href="#Activities" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">STEM</a>
+  <a href="#Trainers" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">VIDEO</a>
+  <a href="#Home" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">GALLERY</a>
+  <a href="#Home" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">ABOUT ME</a>
   <a href="#Home" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">HOME</a>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-medium w3-hide-large" style="margin-top:10px;" onclick="myFunction()">&#9776;</a>
 </div>
 
 <div id="demo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-small">
   <a href="#Home" class="w3-bar-item w3-button">HOME</a>
-  <a href="#Trainers" class="w3-bar-item w3-button">TRAINERS</a>
-  <a href="#Activities" class="w3-bar-item w3-button">ACTIVITIES</a>
-  <a href="#Contact" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="./aboutme.html" class="w3-bar-item w3-button">ABOUT ME</a>
+  <a href="#Activities" class="w3-bar-item w3-button">GALLERY</a>
+  <a href="#Contact" class="w3-bar-item w3-button">VIDEO</a>
+  <a href="#Contact" class="w3-bar-item w3-button">STEM</a>
+  <a href="#Contact" class="w3-bar-item w3-button">FUTURE</a>
 </div>
 
 <!-- w3-content defines a container for fixed size centered content, 
@@ -43,55 +47,45 @@ and is wrapped around the whole page content, except for the footer in this exam
   <header class="w3-display-container w3-wide" style="padding-bottom:32px;" id="Home">
     <img class="w3-image" src="https://images.unsplash.com/photo-1605001011156-cbf0b0f67a51?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80" alt="Photo by Jamie Street" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
-      <h1 class="w3-text-white">DOG CARETAKERS</h1>
-      <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>NEW FOUNDLAND</b></h1>
-      <h6><button class="w3-button w3-round w3-pale-red w3-padding-large w3-large w3-hover-opacity-off"><a href="#Contact">BOOK NOW</a></button></h6>
+      <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>HUDSON FOSTER</b></h1>
+      <h6><button class="w3-button w3-round w3-pale-red w3-padding-large w3-large w3-hover-opacity-off"><a href="./aboutme.html">ABOUT ME</a></button></h6>
     </div>
   </header>
 
   <!-- Grid / Trainers section -->
   <div class="w3-row-padding" id="Trainers">
     <div class="w3-center w3-padding-32">
-      <h2 class="w3-wide w3-center">TRAINERS</h2>
-         <p class="w3-opacity w3-center"><i>The caretakers</i></p><br>
+      <h2 class="w3-wide w3-center">GALLERY</h2>
+         <p class="w3-opacity w3-center"><i>photos</i></p><br>
          <p class="w3-white w3-text-black w3-left-align">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra rhoncus suscipit. Integer eget leo pretium, vulputate velit sit amet, aliquam est. Pellentesque a malesuada orci, at rhoncus enim. Suspendisse at dictum arcu. Etiam tempus varius sem, at pretium augue fringilla et. Curabitur tempus sollicitudin congue. Aliquam in malesuada eros. Nunc ullamcorper sagittis augue a ornare. Aenean faucibus finibus sollicitudin. Nullam interdum tellus mauris, et mattis libero accumsan vitae. Suspendisse et dui accumsan, lacinia leo in, aliquam felis. Aliquam tortor tellus, egestas tristique orci at, rutrum lacinia orci.
+          some pictures of me
       </p>
     </div>
 
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="https://images.unsplash.com/photo-1506993708131-b0bf29d16b76?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80" alt="Photo by Sam manns" style="width:100%">
+        <img src="./kye.jpg" alt="kye" style="width:100%">
         <div class="w3-container">
-          <h3>Jane Cormick</h3>
-          <p class="w3-opacity">CEO & Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="#Contact">BOOK NOW</a></button></p>
+        <p>blah</p>
         </div>
       </div>
     </div>
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="https://images.unsplash.com/photo-1553322378-eb94e5966b0c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" alt="Photo by Manuel Meza" style="width:100%">
+        <img src="./kye.jpg" alt="kye" style="width:100%">
         <div class="w3-container">
-          <h3>Kristen Arnheim</h3>
-          <p class="w3-opacity">Dog Walker & Trainer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="#Contact">BOOK NOW</a></button></p>
+          <p>blah</p>
         </div>
       </div>
     </div>
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="https://images.unsplash.com/photo-1539440860461-f30442bf7ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" alt="Photo by Wieger Stienstra" style="width:100%">
+        <img src="./kye.jpg" alt="kye" style="width:100%">
         <div class="w3-container">
-          <h3>Ola Truntwistle</h3>
-          <p class="w3-opacity">Dog Trainer & Hairdresser</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="#Contact">BOOK NOW</a></button></p>
+          <p>blah</p>
         </div>
       </div>
     </div>
